# multitests

./: CMakeLists.txt  Trompette.cpp  Trompette.h  Tuba.cpp  Tuba.h  main.cpp
tests/: CMakeLists.txt  tests_trompette.cpp  tests_tuba.cpp
